hot fix title and paragraph spacing

--- a/css/base.css
+++ b/css/base.css
@@ -134,7 +134,7 @@ html, body {
     font-family: var(--f-normal);
     line-height: var(--lh1);
     font-style: normal;
-    font-weight: normal;
+    font-weight: 300;
     text-align: center;
     overflow-x: hidden;
 }
@@ -171,7 +171,7 @@ main {
 
 p {
     /* margin-top: 25px; */
-    margin-top: 0.78125rem;
+    margin-top: 1.171875rem;
     /* margin-bottom: 25px; */
     margin-bottom: 0.78125rem;
 }
